Kubernetes/dotnet-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: dotnet-backend
  name: dotnet-backend
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: dotnet-backend
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: dotnet-backend
  name: dotnet-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dotnet-backend
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/backend-net: "true"
        io.kompose.service: dotnet-backend
    spec:
      containers:
        - image: devonfwmts_dotnet-backend:latest
          imagePullPolicy: Never
          name: net
          ports:
            - containerPort: 8081
          resources: {}
      restartPolicy: Always
status: {}
