Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-backend
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dotnet-backend-service
            port:
              number: 8081
  tls:
  - hosts:
    - localhost
